--- a/index.html
+++ b/index.html
@@ -68,13 +68,24 @@
     <img class="left" src="assets/img/left-corner.png" alt="">
   </div>
   <div class="row">
-<div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="http://placehold.it/420"></a>
-    <a class="carousel-item" href="#two!"><img src="http://placehold.it/420"></a>
-    <a class="carousel-item" href="#three!"><img src="http://placehold.it/420"></a>
-    <a class="carousel-item" href="#four!"><img src="http://placehold.it/420"></a>
-    <a class="carousel-item" href="#five!"><img src="http://placehold.it/420"></a>
+  <div class="carousel center col-lg-offset-1 col-md-offset-1" data-indicators="true">
+    <div class="carousel-item white-text" href="#one!">
+    <a class="btn waves-effect white grey-text darken-text-2">first</a>
+    </div>
+    <div class="carousel-item white-text" href="#two!">
+          <a class="btn waves-effect white grey-text darken-text-2">second</a>
+    </div>
+    <div class="carousel-item white-text" href="#three!">
+          <a class="btn waves-effect white grey-text darken-text-2">third</a>
+    </div>
+    <div class="carousel-item white-text" href="#four!">
+          <a class="btn waves-effect white grey-text darken-text-2">fourth</a>
+    </div>
+    <div class="carousel-item white-text" href="#four!">
+          <a class="btn waves-effect white grey-text darken-text-2">fifth</a>
+    </div>
   </div>
+        
   </div>
 </section>
 
