--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="row" id="definition">
       <p>Hello! My name is Paulina ❀ and I'm a Front End developer.</p>
-      <p>For me code means growth, putting myself out there to create something wonderful out of pure imagination. It's not only about the brain you use but the soul you pour into each work for them to be a little bit more useful than first thought.</p>
+      <p>For me code means growth, putting myself out there to create something wonderful out of pure imagination. It's not only about the brain you use, but also the soul you pour into each work for them to be a little bit more useful than first thought.</p>
       <p> That's why I can say that the core of my passions lies in here, as technology can be the starting point of creating a better world.</p>
     </div>
   </div>
@@ -76,9 +76,9 @@
 
 <section class="projects col-md-12 col-lg-12 col-xs-12 col-sm-12" style="padding-left: 0px">
   <div class="row">
-  <div class="carousel center" data-indicators="true">
+  <!--<div class="carousel center" data-indicators="true">
     <div class="carousel-item one white-text" href="#one!">
-    <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/hobilin/spa" target="_blank">code</a>
+    <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/hobilin/spa" target="_blank">code</button>
     <a class="btn waves-effect white grey-text darken-text-2" href="https://hobilin.github.io/spa/" target="_blank">demo</a>
 
     </div>
@@ -97,8 +97,106 @@
     <div class="carousel-item five white-text" href="#five!">
           <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/RoArriaza/AhorRocket-v1" target="_blank">code</a>
           <a class="btn waves-effect white grey-text darken-text-2" href="https://roarriaza.github.io/AhorRocket-v1/" target="_blank">demo</a>
+    </div>-->
+
+      <div class="carousel ">
+
+    <div class="carousel-item" >
+  <div class="card">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/artgallery.PNG">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Art Gallery<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/spa" target="_blank">code</a>
+      <a href="https://hobilin.github.io/spa/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
     </div>
   </div>
+    </div> 
+
+    <div class="carousel-item" ">
+  <div class="card">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/trello.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Trello<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/Trello" target="_blank">code</a>
+      <a href="http://hobilin.github.io/Trello" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+    </div>
+
+        <div class="carousel-item" ">
+  <div class="card">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/addictive.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Addictive<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/mthompsonc/library-project" target="_blank">code</a>
+      <a href="https://mthompsonc.github.io/library-project/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+    </div>
+
+        <div class="carousel-item" ">
+  <div class="card">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/labcar.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">LabCar<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/lab-car-boilerplate" target="_blank">code</a>
+      <a href="https://hobilin.github.io/lab-car-boilerplate/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+    </div>
+
+        <div class="carousel-item" ">
+  <div class="card">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/ahorrockets.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">AhorRocket<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/RoArriaza/AhorRocket-v1" target="_blank">code</a>
+      <a href="https://roarriaza.github.io/AhorRocket-v1/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    </div>
+  </div>
+    </div>
+    </div>
+
         
   </div>
 </section>
@@ -121,6 +219,7 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/jquery-sakura.min.js"></script>
+<script src="assets/js/materialize.js"></script>
 <script src="assets/js/materialize.min.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
