projects version mobile fixed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Homemade+Apple|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="assets/css/jquery-sakura.min.css">
 </head>
 <body>
@@ -63,7 +63,7 @@
   </div>
   <div class="know-me col-md-5 col-lg-5 col-xs-10 col-sm-10">
     <div class="row">
-      <h3>GET TO KNOW ME</h3>
+      <h3>Get to know me</h3>
     </div>
     <div class="row" id="definition">
       <p>Hello! My name is Paulina ❀ and I'm a Front End developer.</p>
@@ -74,34 +74,12 @@
   </div>
 </section>
 
-<section class="projects col-md-12 col-lg-12 col-xs-12 col-sm-12" style="padding-left: 0px">
+<section class="projects col-md-12 col-lg-12 col-xs-12 col-sm-12" >
   <div class="row">
-  <!--<div class="carousel center" data-indicators="true">
-    <div class="carousel-item one white-text" href="#one!">
-    <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/hobilin/spa" target="_blank">code</button>
-    <a class="btn waves-effect white grey-text darken-text-2" href="https://hobilin.github.io/spa/" target="_blank">demo</a>
+     <div class="hidden-xs hidden-sm">
+        <div class="carousel">
 
-    </div>
-    <div class="carousel-item two white-text" href="#two!">
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/hobilin/Trello" target="_blank">code</a>
-          <a class="btn waves-effect white grey-text darken-text-2" href="http://hobilin.github.io/Trello" target="_blank">demo</a>
-    </div>
-    <div class="carousel-item three white-text" href="#three!">
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/mthompsonc/library-project" target="_blank">code</a>
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://mthompsonc.github.io/library-project/" target="_blank">demo</a>
-    </div>
-    <div class="carousel-item four white-text" href="#four!">
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/hobilin/lab-car-boilerplate" target="_blank">code</a>
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://hobilin.github.io/lab-car-boilerplate/" target="_blank">demo</a>
-    </div>
-    <div class="carousel-item five white-text" href="#five!">
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://github.com/RoArriaza/AhorRocket-v1" target="_blank">code</a>
-          <a class="btn waves-effect white grey-text darken-text-2" href="https://roarriaza.github.io/AhorRocket-v1/" target="_blank">demo</a>
-    </div>-->
-
-      <div class="carousel ">
-
-    <div class="carousel-item" >
+    <div class="carousel-item">
   <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/artgallery.PNG">
@@ -115,12 +93,12 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <p>Collaborative project that makes use of Firebase, and the Harvard Art Museums API.</p>
     </div>
   </div>
     </div> 
 
-    <div class="carousel-item" ">
+    <div class="carousel-item">
   <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/trello.png">
@@ -134,12 +112,12 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <p>Replica of Trello using Javascript DOM.</p>
     </div>
   </div>
     </div>
 
-        <div class="carousel-item" ">
+        <div class="carousel-item">
   <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/addictive.png">
@@ -153,12 +131,12 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <p>Collaborative Javascript Library you can use to animate your webpage.</p>
     </div>
   </div>
     </div>
 
-        <div class="carousel-item" ">
+        <div class="carousel-item">
   <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/labcar.png">
@@ -172,12 +150,12 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <p>Project that makes use of Bootstrap to create a responsive webpage.</p>
     </div>
   </div>
     </div>
 
-        <div class="carousel-item" ">
+        <div class="carousel-item">
   <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/ahorrockets.png">
@@ -191,7 +169,98 @@
     </div>
     <div class="card-reveal">
       <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      <p>Collaborative poject about a social network you can use to share store discounts.</p>
+    </div>
+  </div>
+    </div>
+    </div>
+     </div>
+
+<!--MOBILE VERSION-->
+<div class="hidden-md hidden-lg">
+  <div class="card smoo">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/artgallery.PNG">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Art Gallery<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/spa" target="_blank">code</a>
+      <a href="https://hobilin.github.io/spa/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Collaborative project that makes use of Firebase, and the Harvard Art Museums API.</p>
+    </div>
+  </div>
+
+  <div class="card smoo">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/trello.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Trello<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/Trello" target="_blank">code</a>
+      <a href="http://hobilin.github.io/Trello" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Replica of Trello using Javascript DOM.</p>
+    </div>
+  </div>
+    </div>
+
+  <div class="card smoo">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/addictive.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">Addictive<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/mthompsonc/library-project" target="_blank">code</a>
+      <a href="https://mthompsonc.github.io/library-project/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Collaborative Javascript Library you can use to animate your webpage.</p>
+    </div>
+  </div>
+
+  <div class="card smoo">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/labcar.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">LabCar<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/hobilin/lab-car-boilerplate" target="_blank">code</a>
+      <a href="https://hobilin.github.io/lab-car-boilerplate/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Project that makes use of Bootstrap to create a responsive webpage.</p>
+    </div>
+  </div>
+
+  <div class="card smoo">
+    <div class="card-image">
+      <img class="activator" src="assets/img/projects/ahorrockets.png">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">AhorRocket<i class="material-icons right">more_vert</i></span>
+    </div>
+    <div class="card-action">
+      <a href="https://github.com/RoArriaza/AhorRocket-v1" target="_blank">code</a>
+      <a href="https://roarriaza.github.io/AhorRocket-v1/" target="_blank">demo</a>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">Details<i class="material-icons right">close</i></span>
+      <p>Collaborative poject about a social network you can use to share store discounts.</p>
     </div>
   </div>
     </div>
@@ -217,10 +286,10 @@
 
 
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/jquery-sakura.min.js"></script>
-<script src="assets/js/materialize.js"></script>
-<script src="assets/js/materialize.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-smoove/0.2.10/jquery.smoove.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
 </html>
