--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
 
 <section class="myself col-md-12 col-lg-12 col-xs-12 col-sm-12">
   <div class="row">
-    <div class="skills col-md-6 col-lg-6 col-xs-12 col-sm-12">
+  <div class="know-me col-md-5 col-lg-5 col-xs-10 col-sm-10">
+    <div class="row">
+      <h3>Get to know me</h3>
+    </div>
+    <div class="row" id="definition">
+      <p>Hello! My name is Paulina ❀ and I'm a Front End developer.</p>
+      <p>For me code means growth, putting myself out there to create something wonderful out of pure imagination. It's not only about the brain you use, but also the soul you pour into each work for them to be a little bit more useful than first thought.</p>
+      <p> That's why I can say that the core of my passions lies in here, as technology can be the starting point of creating a better world.</p>
+    </div>
+  </div>
+  <div class="skills col-md-6 col-lg-6 col-xs-12 col-sm-12">
       <div class="crowns col-md-4 col-lg-4 col-xs-6 col-sm-6">
         <img class="img-responsive" src="assets/img/crown-jquery.png" alt="">
       </div>
@@ -60,16 +70,6 @@
       <div class="crowns col-md-4 col-lg-4 col-xs-6 col-sm-6">
       <img class="img-responsive" src="assets/img/crown-b.png" alt="">
       </div>
-  </div>
-  <div class="know-me col-md-5 col-lg-5 col-xs-10 col-sm-10">
-    <div class="row">
-      <h3>Get to know me</h3>
-    </div>
-    <div class="row" id="definition">
-      <p>Hello! My name is Paulina ❀ and I'm a Front End developer.</p>
-      <p>For me code means growth, putting myself out there to create something wonderful out of pure imagination. It's not only about the brain you use, but also the soul you pour into each work for them to be a little bit more useful than first thought.</p>
-      <p> That's why I can say that the core of my passions lies in here, as technology can be the starting point of creating a better world.</p>
-    </div>
   </div>
   </div>
 </section>
@@ -178,7 +178,7 @@
 
 <!--MOBILE VERSION-->
 <div class="hidden-md hidden-lg">
-  <div class="card smoo">
+  <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/artgallery.PNG">
     </div>
@@ -195,7 +195,7 @@
     </div>
   </div>
 
-  <div class="card smoo">
+  <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/trello.png">
     </div>
@@ -211,9 +211,9 @@
       <p>Replica of Trello using Javascript DOM.</p>
     </div>
   </div>
-    </div>
 
-  <div class="card smoo">
+
+  <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/addictive.png">
     </div>
@@ -230,7 +230,7 @@
     </div>
   </div>
 
-  <div class="card smoo">
+  <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/labcar.png">
     </div>
@@ -247,7 +247,7 @@
     </div>
   </div>
 
-  <div class="card smoo">
+  <div class="card">
     <div class="card-image">
       <img class="activator" src="assets/img/projects/ahorrockets.png">
     </div>
@@ -264,7 +264,7 @@
     </div>
   </div>
     </div>
-    </div>
+
 
         
   </div>
@@ -288,7 +288,6 @@
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/jquery-sakura.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-smoove/0.2.10/jquery.smoove.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
